--- a/style michael.css
+++ b/style michael.css
@@ -1,13 +1,99 @@
+* {
+    flex-basis: auto;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+    margin: 0;
+    padding: 10px;
+}
+
+
+
+ /* Main (Aside + Artice) */
+
+
+main {
     display: flex;
-    flex-direction: column;
-    text-align: justify;
+    flex-direction: row;
     max-width: 1190px;
     margin: auto;
     border: 2px solid rgb(202, 202, 202);
-    margin-top: 10px;
-    margin-bottom: 10px;
+    min-height: calc(100vh - 20px);
 }
+
+
+
+ /* Aside */
+
+
+aside {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 33%;
+    background-color: #4FC3F7;
+    border: 2px solid rgb(202, 202, 202);
+}
+
+
+aside img {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+
+aside h2 {
+    color:  #4FC3F7;
+    background-color: black;
+    margin: 0 -20px;
+    text-align: center;
+}
+
+
+
+
+  /* Article */
+
+article {
+    padding: 20px;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+}
+
+article section {
+
+}
+
+article .title h2 {
+    margin: 0;
+}
+
+article .title { 
+    display: flex;
+    align-items: center;
+    margin: 0 -20px;
+    text-align: center;
+    border-bottom: 2px #4FC3F7 solid;
+}
+
+article .title i {
+    margin-left: 12%;
+    margin-right: 12%;
+
+}
+
+
+
+
+
+
+
+
+
+
 
 
